--- a/src/components/UI/RaceTrack/RaceTrack.module.css
+++ b/src/components/UI/RaceTrack/RaceTrack.module.css
@@ -8,11 +8,27 @@
     border-top: red solid 2px ;
     border-bottom: red solid 2px;
     padding: 35px 15px;
+    position: relative;
 }
 .horLine{
     height: 1px;
     border: #fff 2px solid;
+    position: absolute; /* Change this */
+    top: 50%; /* Add this */
+    left: 0; /* Add this */
+    right: 0; /* Add this */
+    transform: translateY(-50%); /* Add this */
+    z-index: -10;
 }
+.carName{
+    position: absolute; /* Change this */
+    top: 50%; /* Add this */
+    left: 50%; /* Add this */
+    transform: translate(-50%, -50%); /* Add this */
+    text-align: center; /* Add this */
+    z-index: 1000;
+}
+
 
 
 
